--- a/index.html
+++ b/index.html
@@ -25,14 +25,17 @@
             <div class="input_group">
               <label for="name">Name</label>
               <input type="text" id="name" name="name" />
+              <div class="error" id="nameError"></div>
             </div>
             <div class="input_group">
               <label for="email">Email</label>
               <input type="email" id="email" name="emal" />
+              <div class="error" id="emailError"></div>
             </div>
             <div class="input_group">
               <label for="password">Password</label>
               <input type="Password" id="Password" name="Password" />
+              <div class="error" id="passwordError"></div>
             </div>
             <div class="input_group">
               <div class="captcha_container">
@@ -54,6 +57,7 @@
                   </div>
                 </div>
               </div>
+              <div class="error" id="captchaError"></div>
             </div>
             <button class="signup btn">Sign Up</button>
             <p class="terms_services">
